# DFW2

./: .gitignore  7zipit.bat  CMakeLists.txt  DFW2.sln  Doxyfile  Q генератора.xlsx  README.md  arvsd.docx  block2.txt  rarsources.bat  Генератор.docx
AutoDLL/: AutoDLL.cpp  AutoDLL.vcxproj  AutoDLL.vcxproj.filters  AutoDLL2.cpp  ReadMe.txt  stdafx.cpp
BatchTest/: BatchTest.cpp  BatchTest.vcxproj  BatchTest.vcxproj.filters  ResultCompare.cpp  ResultCompare.h  Test.cpp  Test.h
CompareResults/: CompareResults.cpp  CompareResults.vcxproj  CompareResults.vcxproj.filters  Log.h  Plot.cpp  Plot.h  Result.cpp  Result.h  TimeSeries.h
Compiler/: AutomaticCompiler.cpp  AutomaticCompiler.h  AutomaticCompiler.rgs  Compiler.cpp  Compiler.def  Compiler.idl  Compiler.rc  Compiler.vcxproj  Compiler.vcxproj.filters  CompilerPS.vcxproj  CompilerPS.vcxproj.filters  ReadMe.txt  dllmain.cpp  dllmain.h  resource.h  stdafx.cpp  stdafx.h
CustomDeviceCPP/: CustomDevice.cpp  CustomDevice.h  CustomDeviceCPP.vcxproj  CustomDeviceCPP.vcxproj.filters  autodll.vcxproj  build.bat  customdevice.exp  customdevice.lib
DFW2/: 7zipit.bat  Abs.cpp  Abs.h  AndOrNot.cpp  AndOrNot.h  Automatic.cpp  Automatic.h  BranchMeasures.cpp  BranchMeasures.h  CDynaGeneratorDQBase.cpp  CMakeLists.txt  Comparator.cpp  Comparator.h  CustomDevice.cpp  CustomDevice.h  CustomDeviceContainer.cpp  CustomDeviceContainer.h  CustomDeviceDLL.cpp  CustomDeviceDLL.h  DFW2.cpp  DFW2.sln  DFW2.vcxproj  DFW2.vcxproj.filters  DLLHeader.h  DLLStructs.h  DLLWrapper.h  DataStructs.h  DeadBand.cpp  DeadBand.h  DerlagContinuous.cpp  DerlagContinuous.h  Device.cpp  Device.h  DeviceContainer.cpp  DeviceContainer.h  DeviceContainerProperties.cpp  DeviceContainerProperties.h  DeviceContainerPropertiesBase.h  DeviceId.cpp  DeviceId.h  (+141 more)
DFW2/Docs/: Atan2 angle lifting.xlsx  TotalRightVector.docx  document.tex  lrc - 0.xlsx  Генератор.docx
DFW2/SuiteSparse/CSparse/Source/: cs_gaxpy.c
DFW2/SuiteSparse/KLU/: CMakeLists.txt
DeviceDLL/: DeviceDLL.cpp  DeviceDLL.h  DeviceDLL.vcxproj  DeviceDLL.vcxproj.filters  DeviceDLLUtilities.cpp  DeviceDLLUtilities.h  ReadMe.txt  dll.cpp  stdafx.cpp
Docs/: Adams ringing.xlsx  Adams vs BDF.xlsx  Backup_of_Архитектура.cdr  Backup_of_Парк.cdr  Backup_of_Форсировка Мустанг.cdr  Canay.m  Cq.xlsx  Digsilent Frequency.docx  Eqnom.docx  Hermite_zerocross.xlsx  ISO690Nmerical.XSL  LRC.cdr  Ld(s) - передаточная функция СМ.xlsx  Newton backtracking.docx  Nordsieck.docx  Park Parameters.xlsm  RightVectorTotal.cdr  Sources.xml  Supernodes.docx  Tanh PQ PV.xlsx  ToDo.docx  Zero imepdance branch flows.docx  branch.dvi  branch.eps  branch.tex  document.tex  generators.tex  hermite.xlsx  lrc безудар.xlsx  motion.m  park.asv  park.m  park2.asv  park2.m  park3k.asv  park3k.m  piline.eps  piline2.eps  power.m  smsp.ppt  (+30 more)
Parser/: AutoCompiler.cpp  AutoCompiler.h  AutoCompilerMessages.cpp  AutoCompilerMessages.h  Compiler.cpp  Compiler.h  CompilerLogger.h  DLLOutput.cpp  DLLOutput.h  Equiation.cpp  ExpressionDictionary.cpp  ExpressionDictionary.h  ExpressionParser.cpp  ExpressionParser.h  ExpressionToken.cpp  ExpressionToken.h  ExpressionTransform.h  Parser.cpp  Parser.vcxproj  Simplify.cpp  TransformAbs.cpp  TransformBase.cpp  TransformDiscrete.cpp  TransformMulDiv.cpp  TransformPlusMinus.cpp  TransformPow.cpp  TransformSinCos.cpp  TransformTrigonometry.cpp  cex.h  stdafx.h
RaidenEMS/: RaidenEMS.cpp  RaidenEMS.vcxproj  RaidenEMS.vcxproj.filters
Rastr2Json/: CRastr2Json.cpp  CRastr2Json.h  Rastr2Json.cpp  Rastr2Json.vcxproj  Rastr2Json.vcxproj.filters
RastrChartWPFControl/: Axis.cs  AxisSetup.xaml  AxisSetup.xaml.cs  ChannelCollection.cs  ChannelPropsWindow.xaml  ChannelPropsWindow.xaml.cs  ChartCanvasPlotter.cs  ChartChannel.cs  ChartMarkerRepel.cs  EventExtensions.cs  LegendButton.cs  MiniChannel.cs  MiniChart.xaml  MiniChart.xaml.cs  Points.cs  RastrChart.xaml  RastrChart.xaml.cs  RastrChartWPFControl.csproj  Ruler.cs  ZoneGeometry.cs  ZoneInterface.cs  packages.config
ReferenceCustomModel/: CustomDevice.cpp  CustomDevice.vcxproj  framework.h
ResultFile/: BitStream.cpp  CMakeLists.txt  CSVWriter.cpp  CSVWriter.h  CompareResult.cpp  CompareResult.h  Compressor.cpp  Compressor.h  Device.cpp  Device.h  DeviceCollection.cpp  DeviceCollection.h  DeviceCollection.rgs  DeviceType.cpp  DeviceType.h  DeviceTypeInfo.cpp  DeviceTypeInfo.h  DeviceTypeWrite.cpp  DeviceTypeWrite.h  DeviceTypes.cpp  DeviceTypes.h  Devices.cpp  Devices.h  FileExceptions.cpp  FileExceptions.h  Filewrapper.h  GenericCollection.h  IMinMax.cpp  IMinMax.h  IResultWriterABI.h  RLECompressor.cpp  RLECompressor.h  Resource.h  Result.cpp  Result.h  Result.rgs  ResultFile.cpp  ResultFile.def  ResultFile.idl  ResultFile.rc  (+35 more)
ResultFile/CompareResults/: Log.h  Plot.cpp  Result.h  TimeSeries.h
ResultFileTest/: App.config  ButtonTextBox.cs  DeviceTreeNode.cs  FFSplitContainer.cs  Form1.Designer.cs  Form1.cs  Images.Designer.cs  Images.resx  Program.cs  ResultFileTest.csproj
UMC/UMC/: ASTCodeGeneratorBase.cpp  ASTCodeGeneratorBase.h  ASTEquation.cpp  ASTNodeBase.cpp  ASTNodeBase.h  ASTNodeDeadBand.cpp  ASTNodeDerLag.cpp  ASTNodeDiv.cpp  ASTNodeExpand.cpp  ASTNodeLag.cpp  ASTNodeLagLim.cpp  ASTNodeLimit.cpp  ASTNodeLogicOps.cpp  ASTNodeMinus.cpp  ASTNodeMul.cpp  ASTNodePow.cpp  ASTNodeShrink.cpp  ASTNodeSum.cpp  ASTNodeTypes.h  ASTNodes.h  ASTSimpleEquation.h  ASTTreeBase.h  ASTTrigonometry.cpp  ASTTrivialEquations.cpp  ASTVariable.cpp  ASTreeBase.cpp  AntlrASTErrorListener.cpp  AntlrASTErrorListener.h  AntlrASTVisitor.cpp  AntlrASTVisitor.h  AntlrCPP.cpp  AntlrCPP.vcxproj  AntlrCPP.vcxproj.filters  CMakeLists.txt  CompilerBase.cpp  CompilerBase.h  CompilerGCC.cpp  CompilerGCC.h  CompilerMSBuild.cpp  CompilerMSBuild.h  (+21 more)
UMC/UMC/antlr/: antlr.bat
Winstaller/: InorXL.nsi  Raiden.nsi  RaidenEMS.txt  header.psd  licenseru.rtf  testvswhere.nsi
tests/: 18122019_14-00_simple_v7_clean_nosvc.dfw  Fix Siberia.rbs  Remove Off LRCs.rbs  Scn2Dfw.rbs  case39.rst  case39_sc5.scn  case9all  gen_lf_no_calc  lineflows.dfw  lineoff.dfw  mdp_debug_1  mdp_debug_1.bak  mdp_debug_5.bak  (+22 more)
(+185 files in other folders)
